@@ -45,13 +45,12 @@ public final class I18nContext {
 
     private static final Logger LOG = LoggerFactory.getLogger(I18nContext.class);
 
-    private final Set<Locale> supported = Set.of(new Locale("af"), new Locale("eu"), new Locale("bs"),
-            new Locale("pt", "BR"), Locale.SIMPLIFIED_CHINESE, Locale.TRADITIONAL_CHINESE, new Locale("co"),
-            new Locale("hr"), new Locale("cs"), new Locale("da"), new Locale("nl"), Locale.UK, Locale.FRENCH,
-            Locale.GERMAN, new Locale("he"), new Locale("hu"), new Locale("el"), Locale.JAPANESE, Locale.ITALIAN,
-            new Locale("pl"), new Locale("pt"), new Locale("ro"), new Locale("ru"), new Locale("sk"), new Locale("sl"),
-            new Locale("sr"), new Locale("sv"), new Locale("es"), new Locale("tr"), new Locale("uk"), new Locale("fi"),
-            new Locale("ko"));
+    private final Set<Locale> supported = Set.of(Locale.of("af"), Locale.of("eu"), Locale.of("bs"),
+            Locale.of("pt", "BR"), Locale.SIMPLIFIED_CHINESE, Locale.TRADITIONAL_CHINESE, Locale.of("co"),
+            Locale.of("hr"), Locale.of("cs"), Locale.of("da"), Locale.of("nl"), Locale.UK, Locale.FRENCH, Locale.GERMAN,
+            Locale.of("he"), Locale.of("hu"), Locale.of("el"), Locale.JAPANESE, Locale.ITALIAN, Locale.of("pl"),
+            Locale.of("pt"), Locale.of("ro"), Locale.of("ru"), Locale.of("sk"), Locale.of("sl"), Locale.of("sr"),
+            Locale.of("sv"), Locale.of("es"), Locale.of("tr"), Locale.of("uk"), Locale.of("fi"), Locale.of("ko"));
 
     private final ReplaySubject<Locale> locale = ReplaySubject.createWithSize(1);
 
